Attempt to fix travel reports alignment

--- a/_sass/_pages/_travel_reports.scss
+++ b/_sass/_pages/_travel_reports.scss
@@ -1,12 +1,12 @@
 .travel-reports-section {
   background: url(../images/guy_at_river_tiny.jpg) no-repeat center center;
   background-size: cover;
-  
+
   padding: 20px 0 0 0;
 
   transition: background 0.5s linear;
   height: calc(100vh - #{$navbar-height} - 50px);
-  
+
   .container {
     height: 100%;
   }
@@ -61,7 +61,7 @@
 
 .report-item {
   $border-radius: 10px;
-  
+
   position: relative;
   margin: 5px;
   color: white;
@@ -133,8 +133,9 @@
   width: calc(100% - 30px);
   position: absolute;
   z-index: 1;
+  left: 15px;
   display: inline-block;
-  
+
   &:not(.in):not(.collapsing) {
     z-index: -1;
   }
